# vda5050_connector

./: .bazelrc  .gitignore  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-testlogs  bazel-vda5050_connector
src/: BUILD
src/iw_logging/: BUILD  CMakeLists.txt  package.xml
src/iw_logging/include/iw_logging/: directory_logger.hpp  logger_base.hpp  logging.hpp  std_logger.hpp
src/iw_logging/src/: directory_logger.cpp
src/iw_state_machine/: BUILD  CMakeLists.txt  package.xml
src/iw_state_machine/include/iw_state_machine/: state_machine.hpp
src/iw_vda5050_connector/: BUILD  CMakeLists.txt  package.xml
src/iw_vda5050_connector/include/iw_vda5050_connector/: Action.hpp  InstantAction.hpp  InteractionZoneState.hpp  Load.hpp  MapUpdate.hpp  MetaData.hpp  NetworkConfiguration.hpp  Position.hpp  Position3d.hpp  State.hpp  Vda5050Manager.hpp  Visualization.hpp  Zone.hpp  ZoneParameter.hpp  ZoneUpdate.hpp
src/iw_vda5050_connector/src/: Action.cpp  InstantAction.cpp  InteractionZoneState.cpp  Load.cpp  MapUpdate.cpp  MetaData.cpp  Position.cpp  Position3d.cpp  State.cpp  Vda5050Manager.cpp  Visualization.cpp  Zone.cpp  ZoneParameter.cpp  ZoneUpdate.cpp  test.cpp
src/iw_vda5050_connector/test/: test.cpp
src/vda5050_connector/: BUILD  CMakeLists.txt  package.xml
src/vda5050_connector/include/vda5050_connector/: Action.hpp  ActionParameter.hpp  ActionState.hpp  AgvAction.hpp  AgvGeometry.hpp  AgvPosition.hpp  ArrayLength.hpp  BatteryState.hpp  BoundingBoxReference.hpp  Connection.hpp  ControlPoint.hpp  Edge.hpp  EdgeState.hpp  Envelope2d.hpp  Envelope3d.hpp  Error.hpp  ErrorReference.hpp  FactSheet.hpp  Info.hpp  InfoReference.hpp  InstantAction.hpp  LoadDimension.hpp  LoadSet.hpp  LoadSpecification.hpp  ManagerFSM.hpp  Node.hpp  NodePosition.hpp  NodeState.hpp  OptionalParameter.hpp  Order.hpp  PhysicalParameters.hpp  PolygonPoint.hpp  Position.hpp  ProtocolFeatures.hpp  ProtocolHeader.hpp  ProtocolLimits.hpp  SafetyState.hpp  State.hpp  StringLength.hpp  TimingInfo.hpp  (+5 more)
src/vda5050_connector/include/vda5050_connector/interface/: BaseAction.hpp  BaseActionParameter.hpp  BaseActionState.hpp  BaseAgvAction.hpp  BaseAgvGeometry.hpp  BaseAgvPosition.hpp  BaseArrayLenght.hpp  BaseBatteryState.hpp  BaseBoundingBoxReference.hpp  BaseControlPoint.hpp  BaseEdge.hpp  BaseEdgeState.hpp  BaseEnvelope2d.hpp  BaseEnvelope3d.hpp  BaseError.hpp  BaseErrorReference.hpp  BaseFactSheet.hpp  BaseInfo.hpp  BaseInfoReference.hpp  BaseInstantAction.hpp  BaseInterface.hpp  BaseLoadDimensions.hpp  BaseLoadSet.hpp  BaseLoadSpecification.hpp  BaseNode.hpp  BaseNodePostion.hpp  BaseNodeState.hpp  BaseOptionalParameter.hpp  BaseOrder.hpp  BasePhysicalParameters.hpp  BasePolygonPoint.hpp  BasePosition.hpp  BaseProtocolFeatures.hpp  BaseProtocolHeader.hpp  BaseProtocolLimits.hpp  BaseSafetyState.hpp  BaseState.hpp  BaseStringLength.hpp  BaseTimingInfo.hpp  BaseTopicInterface.hpp  (+5 more)
src/vda5050_connector/interface/: CMakeLists.txt
src/vda5050_connector/interface/include/vda5050_connector_interface/: BaseAction.hpp  BaseActionParameter.hpp  BaseActionState.hpp  BaseAgvAction.hpp  BaseAgvGeometry.hpp  BaseAgvPosition.hpp  BaseArrayLength.hpp  BaseBatteryState.hpp  BaseBoundingBoxReference.hpp  BaseConnection.hpp  BaseControlPoint.hpp  BaseEdge.hpp  BaseEdgeState.hpp  BaseEnvelope2d.hpp  BaseEnvelope3d.hpp  BaseError.hpp  BaseErrorReference.hpp  BaseFactSheet.hpp  BaseInfo.hpp  BaseInfoReference.hpp  BaseInstantAction.hpp  BaseInterface.hpp  BaseLoadDimension.hpp  BaseLoadDimensions.hpp  BaseLoadSet.hpp  BaseLoadSpecification.hpp  BaseManagerInterface.hpp  BaseNetworkConfiguration.hpp  BaseNode.hpp  BaseNodePosition.hpp  BaseNodePostion.hpp  BaseNodeState.hpp  BaseOptionalParameter.hpp  BaseOrder.hpp  BasePhysicalParameters.hpp  BasePolygonPoint.hpp  BasePosition.hpp  BaseProtocolFeatures.hpp  BaseProtocolHeader.hpp  BaseProtocolLimits.hpp  (+13 more)
src/vda5050_connector/nlohmann/: json.hpp
src/vda5050_connector/src/: Action.cpp  ActionParameter.cpp  ActionState.cpp  AgvAction.cpp  AgvGeometry.cpp  AgvPosition.cpp  ArrayLength.cpp  BatteryState.cpp  BoundingBoxReference.cpp  Connection.cpp  ControlPoint.cpp  Edge.cpp  EdgeState.cpp  Envelope2d.cpp  Envelope3d.cpp  Error.cpp  ErrorReference.cpp  FactSheet.cpp  Info.cpp  InfoReference.cpp  InstantAction.cpp  LoadDimension.cpp  LoadSet.cpp  LoadSpecification.cpp  Node.cpp  NodePosition.cpp  NodeState.cpp  OptionalParameter.cpp  Order.cpp  PhysicalParameters.cpp  PolygonPoint.cpp  Position.cpp  ProtocolFeatures.cpp  ProtocolHeader.cpp  ProtocolLimits.cpp  SafetyState.cpp  State.cpp  StringLength.cpp  TimingInfo.cpp  Trajectory.cpp  (+5 more)
src/vda5050_connector/src/manager_fsm/: manager_fsm.cpp  states.cpp  transitions.cpp
