<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iw_logging</name>
  <version>0.0.0</version>
  <description>Logging utils and base logger for middleware agnostic classes</description>
  <maintainer email="marco.bassa@idealworks.com">Marco Bassa</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>